[VK] Do not make keyboard window background transparent for old UI.

In [1] and [2], we changed the keyboard background to be transparent.
However, when the IME extension refreshes itself (e.g. due to ChromeVox
activation), the keyboard becomes see through, which is bad (see bug).

We basically put the changes to window background in [1] and [2] behind
two flags (enable-fullscreen-handwriting-virtual-keyboard and
enable-virtual-keyboard-md-ui), both of which are currently disabled
by default.

This should fix the attached bug. We will come up with permanent
solution when we need to launch fullscreen handwriting or the new UI.

This needs to be merged in M68.

[1] https://crrev.com/1ee24d79e79bd200c3d59224e07209897dc5d007 [formerly 7c1b43d13f6c914c496dae48b1c392ee6e045794]
[2] https://crrev.com/cf94a9d97a7d007832c732f2d1ad8b4170c5e800 [formerly 2d463f5527d6d5b4b82fbb563798462793c3b6f2]

Bug: 840731
Change-Id: I937b492986291e9aebfc15fab03f6123aba04dec
Reviewed-on: https://chromium-review.googlesource.com/1141546
Reviewed-by: Yuichiro Hanada <yhanada@chromium.org>
Commit-Queue: Darren Shen <shend@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575966}
Former-commit-id: fbe9d17a5c810a1955c00d0546f6c82537c63aa4